--- a/BinaryTree/readme
+++ b/BinaryTree/readme
@@ -1,24 +1,25 @@
-先序建立二叉树：
-a b d - - e f - g h - - i - - - c - - 
+二叉树：
+     a
+    / \
+   b   c
+  / \
+ d   e
+    / \
+   f
+    \
+     g
+    / \
+   h   i
 
+先序建立二叉树：a b d - - e f - g h - - i - - - c - -
 
-先序遍历二叉树：
-a b d e f g h i c 
+先序遍历二叉树：a b d e f g h i c 
+中序遍历二叉树：d b f h g i e a c 
+后序遍历二叉树：d h i g f e b c a 
 
-中序遍历二叉树：
-d b f h g i e a c 
-
-后序遍历二叉树：
-d h i g f e b c a 
-
-先序遍历二叉树(非递归)：
-a b d e f g h i c 
-
-中序遍历二叉树(非递归)：
-d b f h g i e a c 
-
-后序遍历二叉树(非递归)：
-d h i g f e b c a 
+先序遍历二叉树(非递归)：a b d e f g h i c 
+中序遍历二叉树(非递归)：d b f h g i e a c 
+后序遍历二叉树(非递归)：d h i g f e b c a 
 
 析构函数：
 删除结点：d
